--- a/api/qsharp/microsoft.quantum.canon.repeata.yml
+++ b/api/qsharp/microsoft.quantum.canon.repeata.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.repeata
 name: RepeatA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 在给定的次数后重复操作。
 examples: >-
   以下项是等效的：
@@ -56,9 +56,9 @@ seeAlso:
 - microsoft.quantum.canon.repeatc
 - microsoft.quantum.canon.repeatca
 metadata:
-  ms.openlocfilehash: 59f3dc721801ddbb0de966948ddaacc59529b833
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: b805943a2d85e62fd5f8b27664b51dbed5409fc1
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85886298"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355634"
