--- a/api/qsharp/microsoft.quantum.errorcorrection.css.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.css.yml
@@ -2,13 +2,13 @@
 uid: microsoft.quantum.errorcorrection.css
 name: CSS
 type: newtype
-namespace: Microsoft.Quantum.ErrorCorrection
-summary: 表示 Calderbank –选定– Steane （CSS）代码，该代码由其编码器、解码器定义，并分别表示`X`和`Z`错误的症状度量过程。
+namespace: microsoft.quantum.errorcorrection
+summary: 表示 Calderbank –选定– Steane (CSS) 代码，该代码由其编码器、解码器定义，并分别表示和错误的症状度量过程 `X` `Z` 。
 syntax: newtype CSS = (Microsoft.Quantum.ErrorCorrection.EncodeOp, Microsoft.Quantum.ErrorCorrection.DecodeOp, Microsoft.Quantum.ErrorCorrection.SyndromeMeasOp, Microsoft.Quantum.ErrorCorrection.SyndromeMeasOp);
 metadata:
-  ms.openlocfilehash: b1bedcc35249997229cb7d6615df0ad756b4f5ca
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: ee80335b929e9c1e4ef5fc67dee03ad9dc99bd29
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685612"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336628"
