--- a/api/qsharp/microsoft.quantum.extensions.convert.boolstobigint.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.boolstobigint.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.convert.boolstobigint
 name: BoolsToBigInt
 type: function
-namespace: Microsoft.Quantum.Extensions.Convert
+namespace: microsoft.quantum.extensions.convert
 summary: BoolsToBigInt 已被弃用。 请改用 @"microsoft.quantum.convert.boolarrayasbigint"。
 syntax: 'function BoolsToBigInt (a : Bool[]) : BigInt'
 input:
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: 3b76f8db681d2978060e7ac1ca8fc3c5b84ae20b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 6c471f2b5d38f873212105a1ee47d079d0cf0778
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682112"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349276"
