--- a/api/qsharp/microsoft.quantum.extensions.convert.tostringd.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.tostringd.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.convert.tostringd
 name: ToStringD
 type: function
-namespace: Microsoft.Quantum.Extensions.Convert
+namespace: microsoft.quantum.extensions.convert
 summary: ToStringD 已被弃用。 请改用 @"microsoft.quantum.convert.doubleasstring"。
 syntax: 'function ToStringD (a : Double) : String'
 input:
@@ -17,9 +17,9 @@ output:
   - isPrimitive: true
     uid: String
 metadata:
-  ms.openlocfilehash: e846c9bc8f0eecfef3f46d54787e417f246f92a9
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 8b97842a152e4d794ca6fd3c77b460b68a005f9f
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682018"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89349021"
