--- a/api/qsharp/microsoft.quantum.machinelearning.estimategradient.yml
+++ b/api/qsharp/microsoft.quantum.machinelearning.estimategradient.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.machinelearning.estimategradient
 name: EstimateGradient
 type: operation
-namespace: Microsoft.Quantum.MachineLearning
+namespace: microsoft.quantum.machinelearning
 summary: 估算特定模型和给定编码输入的顺序分类器的定型渐变。
 remarks: 此操作使用 Hadamard 测试和参数移位技术来估算渐变。
 syntax: 'operation EstimateGradient (model : Microsoft.Quantum.MachineLearning.SequentialModel, encodedInput : Microsoft.Quantum.MachineLearning.StateGenerator, nMeasurements : Int) : Double[]'
@@ -27,9 +27,9 @@ output:
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: 3416401dba73f3b0f65470388d3ac2c08fbaa54c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 155ad002732796d2c5ab3710b81d23a089b238ef
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683545"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336135"
