--- a/api/qsharp/microsoft.quantum.research.chemistry.optimizedtrottersteporacle.yml
+++ b/api/qsharp/microsoft.quantum.research.chemistry.optimizedtrottersteporacle.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.research.chemistry.optimizedtrottersteporacle
 name: OptimizedTrotterStepOracle
 type: function
-namespace: Microsoft.Quantum.Research.Chemistry
+namespace: microsoft.quantum.research.chemistry
 summary: 返回优化的 Trotter 步骤操作和运行它所需的参数。
 syntax: 'function OptimizedTrotterStepOracle (qSharpData : Microsoft.Quantum.Chemistry.JordanWigner.JordanWignerEncodingData, trotterStepSize : Double, trotterOrder : Int) : (Int, (Double, (Qubit[] => Unit is Adj + Ctl)))'
 input:
   content: '(qSharpData : Microsoft.Quantum.Chemistry.JordanWigner.JordanWignerEncodingData, trotterStepSize : Double, trotterOrder : Int)'
   types:
   - name: qSharpData
-    summary: 格式描述的`JordanWignerEncodingData` Hamiltonian。
+    summary: 格式描述的 Hamiltonian `JordanWignerEncodingData` 。
     uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerencodingdata
   - name: trotterStepSize
     summary: Trotter 集成器的步长大小。
@@ -22,7 +22,7 @@ input:
 output:
   content: (Int, (Double, (Qubit[] => Unit is Adj + Ctl)))
   types:
-  - summary: 元组，其中`Int` ：是已分配的 qubits 的`Double`数目`1.0/trotterStepSize`，是，操作是 Trotter 步骤。
+  - summary: 元组，其中： `Int` 是已分配的 qubits 的数目， `Double` 是 `1.0/trotterStepSize` ，操作是 Trotter 步骤。
     types:
     - isPrimitive: true
       uid: Int
@@ -43,9 +43,9 @@ output:
         - Adjoint
         - Controlled
 metadata:
-  ms.openlocfilehash: defa30f488d64991bea7e005d18b9eafeb99f05a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 0df7574ed599e094ec820ef683742d0bb02973cc
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683103"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89330355"
