--- a/api/qsharp/microsoft.quantum.simulation.evolutiongenerator.yml
+++ b/api/qsharp/microsoft.quantum.simulation.evolutiongenerator.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.simulation.evolutiongenerator
 name: EvolutionGenerator
 type: newtype
-namespace: Microsoft.Quantum.Simulation
+namespace: microsoft.quantum.simulation
 summary: >-
   将 dynamical 生成器表示为一组 simulatable 入口，并以这种方式进行扩展。
 
@@ -10,9 +10,9 @@ summary: >-
   字词数的最后一个参数。
 syntax: newtype EvolutionGenerator = (Microsoft.Quantum.Simulation.EvolutionSet, Microsoft.Quantum.Simulation.GeneratorSystem);
 metadata:
-  ms.openlocfilehash: 83d2c39d50ce84510ecca7276074287789e1aa8d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4015fe9075678e1f2f8f701cfc5373f11384600e
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686869"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343224"
