--- a/api/qsharp/microsoft.quantum.simulation.evolutionschedule.yml
+++ b/api/qsharp/microsoft.quantum.simulation.evolutionschedule.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.simulation.evolutionschedule
 name: EvolutionSchedule
 type: newtype
-namespace: Microsoft.Quantum.Simulation
+namespace: microsoft.quantum.simulation
 summary: >-
   表示依赖时间的 dynamical 生成器。
 
@@ -10,9 +10,9 @@ summary: >-
   `Double`参数是 $ [0，1] $ 中的一个计划。
 syntax: newtype EvolutionSchedule = (Microsoft.Quantum.Simulation.EvolutionSet, (Double -> Microsoft.Quantum.Simulation.GeneratorSystem));
 metadata:
-  ms.openlocfilehash: 99e49eb5e118dc64f8fab3a8ef75a796651c3734
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e6fdee28dc3c2b8c2de9e58282ec12abd351cafd
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82655139"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343241"
