--- a/api/qsharp/microsoft.quantum.canon.repeatc.yml
+++ b/api/qsharp/microsoft.quantum.canon.repeatc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.repeatc
 name: RepeatC
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 在给定的次数后重复操作。
 examples: >-
   以下项是等效的：
@@ -56,9 +56,9 @@ seeAlso:
 - microsoft.quantum.canon.repeata
 - microsoft.quantum.canon.repeatca
 metadata:
-  ms.openlocfilehash: 092771c95695cd79bcfd142e53e48a4225ccb091
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 97f1eb6696ced75231a7b062d9b55c5de654be46
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85886230"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355566"
