--- a/api/qsharp/microsoft.quantum.canon.restrictedtosubregisterc.yml
+++ b/api/qsharp/microsoft.quantum.canon.restrictedtosubregisterc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.restrictedtosubregisterc
 name: RestrictedToSubregisterC
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   将操作限制为寄存器的索引数组，即，subregister。
 
-  修饰符`C`指示操作可控制。
+  修饰符 `C` 指示操作可控制。
 syntax: 'function RestrictedToSubregisterC (op : (Qubit[] => Unit is Ctl), idxs : Int[]) : (Qubit[] => Unit is Ctl)'
 input:
   content: '(op : (Qubit[] => Unit is Ctl), idxs : Int[])'
@@ -48,9 +48,9 @@ output:
 seeAlso:
 - microsoft.quantum.canon.restrictedtosubregister
 metadata:
-  ms.openlocfilehash: 045086047c80677c2ff5ab5f670c6b0107d1ef7f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: a671555354af3f7d701e27da1284cc605a73d448
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678437"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89355345"
