--- a/api/qsharp/microsoft.quantum.errorcorrection.decodefrombitflipcode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.decodefrombitflipcode.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.errorcorrection.decodefrombitflipcode
 name: DecodeFromBitFlipCode
 type: operation
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: 从 [3，1，3]/⟦3，1，1⟧位翻转代码进行解码。
 syntax: 'operation DecodeFromBitFlipCode (logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister) : (Qubit[], Qubit[])'
 input:
@@ -26,9 +26,9 @@ seeAlso:
 - logicalregister
 - encodeintobitflipcode
 metadata:
-  ms.openlocfilehash: 22b892a4b6f52c6d577fff954de4e3912c635853
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4a176a3f186e298e98765fa1aa9effe70904d44b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685628"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336594"
