--- a/api/qsharp/microsoft.quantum.errorcorrection.decodefromfivequbitcode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.decodefromfivequbitcode.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.errorcorrection.decodefromfivequbitcode
 name: DecodeFromFiveQubitCode
 type: operation
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: 对⟦5，1，3⟧量程代码进行解码。
 syntax: 'operation DecodeFromFiveQubitCode (logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister) : (Qubit[], Qubit[])'
 input:
@@ -26,9 +26,9 @@ seeAlso:
 - fivequbitcodeencoder
 - logicalregister
 metadata:
-  ms.openlocfilehash: 46beb45bdd73c206208f62a8b0890fb98f368245
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 82d2dc5dacc62041cfa3c82c036355543793a6e1
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685066"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336577"
