--- a/api/qsharp/microsoft.quantum.errorcorrection.decodefromsteanecode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.decodefromsteanecode.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.errorcorrection.decodefromsteanecode
 name: DecodeFromSteaneCode
 type: operation
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: 一种反向编码操作，它将未编码的量程寄存器映射到⟦7，1，3⟧ Steane 量程代码下的编码的量程寄存器。
 remarks: 所选的解码器使用⟦7，1，3⟧ Steane 代码的 CSS 代码属性，即，它会单独更正 X 错误和 Z 错误。 此代码的一个属性是，X 的位置分别是 x 的分别是 X 的3位编码，这是 X 的3位编码，被视为整数。
 syntax: 'operation DecodeFromSteaneCode (logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister) : (Qubit[], Qubit[])'
-references: '- D. Gottesman、"稳定代码和量程错误纠正" 博士学位 Thesis，Caltech，1997;https://arxiv.org/abs/quant-ph/9705052'
+references: '- D. Gottesman、"稳定代码和量程错误纠正" 博士学位 Thesis，Caltech，1997; https://arxiv.org/abs/quant-ph/9705052'
 input:
   content: '(logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister)'
   types:
@@ -29,9 +29,9 @@ seeAlso:
 - steanecodedecoder
 - logicalregister
 metadata:
-  ms.openlocfilehash: 0256c1bf847009b6ea6f712aece34219f5c5ff8d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 498222c08ca292571c674b4e249004bd5ba56450
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685042"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336526"
