--- a/api/qsharp/microsoft.quantum.errorcorrection.encodeintofivequbitcode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.encodeintofivequbitcode.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.errorcorrection.encodeintofivequbitcode
 name: EncodeIntoFiveQubitCode
 type: operation
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: 编码为⟦5，1，3⟧量程代码。
 syntax: 'operation EncodeIntoFiveQubitCode (physRegister : Qubit[], auxQubits : Qubit[]) : Microsoft.Quantum.ErrorCorrection.LogicalRegister'
 input:
   content: '(physRegister : Qubit[], auxQubits : Qubit[])'
   types:
   - name: physRegister
-    summary: 表示未编码状态的 qubit。 此数组`Qubit[]`的长度为1。
+    summary: 表示未编码状态的 qubit。 此数组 `Qubit[]` 的长度为1。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -21,14 +21,14 @@ input:
 output:
   content: Microsoft.Quantum.ErrorCorrection.LogicalRegister
   types:
-  - summary: 存储编码状态的类型`LogicalRegister`的物理 qubits 数组。
+  - summary: 存储编码状态的类型的物理 qubits 数组 `LogicalRegister` 。
     uid: microsoft.quantum.errorcorrection.logicalregister
 seeAlso:
 - logicalregister
 metadata:
-  ms.openlocfilehash: f2f8c3aef8ea85691270958cf3274daa22f3ac03
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: ca7d2b6420169ca3b5d72527e34a254bb063ac50
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685000"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336475"
