--- a/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcode.yml
@@ -2,15 +2,15 @@
 uid: microsoft.quantum.errorcorrection.fivequbitcode
 name: FiveQubitCode
 type: function
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: 返回一个 QECC 值，该值表示⟦5、1、3⟧代码编码器和解码器，并提供就地的症状度量。
 remarks: >-
   以下两篇文章中单独找到了此代码：
 
 
-  - C. H. Bennett，DiVincenzo，J。 Smolin 和 K. K。 Wootters，"Mixed 状态牵连 and 量子纠错"，"Phys，54（1996） pp 3824-3851;https://arxiv.org/abs/quant-ph/9604024和
+  - C. H. Bennett，DiVincenzo，J。 Smolin 和 K. K。 Wootters，"混合状态牵连和量程错误更正" Phys，54 (1996) pp 3824-3851; https://arxiv.org/abs/quant-ph/9604024 和
 
-  - R. Laflamme，Miquel，J P。 巴斯和 W.x.y.z。 Zurek "完美的量程错误纠正代码" Phys Lett。 77（1996） pp 198-201;https://arxiv.org/abs/quant-ph/9602019
+  - R. Laflamme，Miquel，J P。 巴斯和 W.x.y.z。 Zurek "完美的量程错误纠正代码" Phys Lett。 77 (1996) pp 198-201; https://arxiv.org/abs/quant-ph/9602019
 syntax: 'function FiveQubitCode () : Microsoft.Quantum.ErrorCorrection.QECC'
 input:
   content: ()
@@ -18,12 +18,12 @@ input:
 output:
   content: Microsoft.Quantum.ErrorCorrection.QECC
   types:
-  - summary: 通过指定`QECC`类型返回量程错误更正代码的实现。
+  - summary: 通过指定类型返回量程错误更正代码的实现 `QECC` 。
     uid: microsoft.quantum.errorcorrection.qecc
 metadata:
-  ms.openlocfilehash: 39bd3adacd0f8e872d682d0df0bf81a3f1e1d8f0
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 113e654543997a0560c83a3c632bb54443e844cf
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684948"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336288"
