--- a/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcoderecoveryfn.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.fivequbitcoderecoveryfn.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.errorcorrection.fivequbitcoderecoveryfn
 name: FiveQubitCodeRecoveryFn
 type: function
-namespace: Microsoft.Quantum.ErrorCorrection
+namespace: microsoft.quantum.errorcorrection
 summary: 返回一个函数，该函数通过表查找⟦5，1，3⟧量程代码，将错误症状度量映射到相应的纠错 Pauli 运算符。
 remarks: >-
   通过循环访问权重 $1 $ 的所有错误，我们获取总计 $ 3 \ 乘以 5 = 15 $ 可能的非普通 syndromes。
 
-  除了标识，还生成了一个错误表和相应的症状。 对于5个 qubit 代码，此表由提供： $X\_1：（0，0，0，1）;X\_2：（1，0，0，0）;X\_3：（1，1，0，0）;X\_4：（0，1，1，0）;X\_5：（0，0，1，1） $，$Z\_1：（1，0，1，0）;Z\_2：（0，1，0，1）;Z\_3：（0，0，1，0）;Z\_4：（1，0，0，1）;Z\_5：（0，1，0，0） $，其中 $Y _i $ 通过将 $X _i $ 和 $Z 添加到 _i $ syndromes 获取。 请注意，表查找恢复中的排序是通过将 bitvectors 转换为整数（使用 little endian）来提供的。
+  除了标识，还生成了一个错误表和相应的症状。 对于5个 qubit 代码，此表由提供： $X \_ 1： (0，0，0，1) ;X \_ 2： (1，0，0，0) ;X \_ 3： (1，1，0，0) ;X \_ 4： (0，1，1，0) ;X \_ 5： (0，0，1，1) $，$Z \_ 1： (1，0，1，0) ;Z \_ 2： (0，1，0，1) ;Z \_ 3： (0，0，1，0) ;Z \_ 4： (1，0，0，1) ;Z \_ 5： (0、1、0、0) $ $Y 通过添加 $X _i $ 和 $Z _i $ syndromes 获取 _i $。 请注意，表查找恢复中的排序通过使用 little endian) 将 bitvectors 转换为整数 (提供。
 syntax: 'function FiveQubitCodeRecoveryFn () : Microsoft.Quantum.ErrorCorrection.RecoveryFn'
 input:
   content: ()
@@ -15,14 +15,14 @@ input:
 output:
   content: Microsoft.Quantum.ErrorCorrection.RecoveryFn
   types:
-  - summary: 采用症状度量`RecoveryFn` `Result[]`的类型的函数，并返回更正`Pauli[]`检测到的错误的运算符。
+  - summary: 采用症状度量的类型的函数 `RecoveryFn` `Result[]` ，并返回 `Pauli[]` 更正检测到的错误的运算符。
     uid: microsoft.quantum.errorcorrection.recoveryfn
 seeAlso:
 - recoveryfn
 metadata:
-  ms.openlocfilehash: 8de748ddaf446cfcf7b8694079bd84bfc171211c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 3219f90d40817e810f6adff53d8d843ad419e66b
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684887"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89336237"
