--- a/api/qsharp/microsoft.quantum.extensions.convert.tostringiformat.yml
+++ b/api/qsharp/microsoft.quantum.extensions.convert.tostringiformat.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.extensions.convert.tostringiformat
 name: ToStringIFormat
 type: function
-namespace: Microsoft.Quantum.Extensions.Convert
+namespace: microsoft.quantum.extensions.convert
 summary: ToStringIFormat 已被弃用。 请改用 @"microsoft.quantum.convert.intasstringwithformat"。
 syntax: 'function ToStringIFormat (a : Int, fmt : String) : String'
 input:
@@ -20,9 +20,9 @@ output:
   - isPrimitive: true
     uid: String
 metadata:
-  ms.openlocfilehash: e2eeab76c1c24700c7c46b17086558f9298189ab
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 66028b7571d27940639e7349a423e7a826750a70
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674211"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89348970"
